methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBaggle = false
  do {
    for (i <- 1 to 6){
    	avance()
    	if (estSurBiscuit()){
      	vuBaggle = true
  		}
  
    }
  } while vuBaggle
}